# buffered_logger

./: Cargo.toml  README.md
src/: lib.rs  main.rs
